# latent_cbf

./: .gitignore  LICENSE  README.md  dubins_env.py  index.html  pyproject.toml  requirements.txt
PytorchReachability/: README.md  setup.py
PytorchReachability/PyHJ/data/: __init__.py  collector.py
PytorchReachability/PyHJ/policy/: __init__.py
PytorchReachability/PyHJ/policy/modelfree/: ddpg_avoid_classical.py  ddpg_avoid_classical_acreg.py  (+1 more)
PytorchReachability/PyHJ/reach_rl_gym_envs/: __init__.py  dubins-wm-dp.py  maniskill-wm.py
configs/: __init__.py  base.py  controller.py  dreamer_conf.py  environment.py  obstacle.py  presets.py  rendering.py
controllers/: __init__.py  diffusion_controller.py  factory.py  mppi_controller.py  random_controller.py  wm_predictor.py
diffusion4robotics/: README.md  combine_traj_to_buffer.py  defaults.yaml  env.yml  finetune.py  train.py
diffusion4robotics/data4robotics/: load_pretrained.py  misc.py  replay_buffer.py
diffusion4robotics/data4robotics/models/: resnet.py
diffusion4robotics/experiments/: finetune.yaml
diffusion4robotics/experiments/task/: dubins.yaml
docs/: architecture-reorganization-plan.md
dreamerv3-torch/: models.py  networks.py  tools.py
dreamerv3_torch/: __init__.py  models.py  networks.py  pyproject.toml  tools.py
scripts/: collect_batch_diffusion.py  collect_batch_diffusion.sh  collect_trajs.py  combine_traj_to_buffer_dubins.py  combine_trajectories.py  create_videos.py  dreamer_offline.py  eval_dreamer.py  run_experiment.py  visualize_trajs.py  wm_ddpg.py
src/latent_cbf/configs/: __init__.py  base.py  controller.py  dreamer_conf.py  environment.py  experiment.py  paths.py  presets.py
src/latent_cbf/controllers/: __init__.py  diffusion_controller.py  factory.py  mpc_controller.py  mppi_controller.py  simple_controller.py  wm_predictor.py
src/latent_cbf/dubins/: dubins_env.py
src/latent_cbf/scripts/: collect_batch_diffusion.sh  collect_trajs.py  combine_traj_to_buffer_dubins.py  combine_trajectories.py  debug_deterministic.py  dreamer_offline.py  eval_dreamer.py  hp_ablation.sh  hp_ablation2.sh  inspect_trajectory.py  run_experiment.py  train_diffusion.py  visualize_trajs.py  wm_ddpg.py  wm_trajectory_stats.py
static/css/: index.css
(+1 files in other folders)
